# ZenithOs

./: ARCHITECTURE.md  DEMO_SCRIPT.md  README.md  task.md
agent/: .env  pyproject.toml
agent/agent/: bus.py  main.py  policy.py  remediation.py  state.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: agent-feed.tsx  audit-log.tsx  remediation-diff.tsx  status-bar.tsx  topology-graph.tsx  wri-gauge.tsx
dashboard/src/hooks/: use-websocket.ts
dashboard/src/lib/: types.ts
telemetry-engine/: Cargo.toml
telemetry-engine/src/: health.rs  ingest.rs  main.rs  models.rs  ws.rs
